src/interpreter/snapshots/inlyne__interpreter__tests__table_with_caption.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n\n<table>\n<caption>Basic Table Caption</caption>\n<thead>\n<tr>\n<th>Name</th>\n<th>Age</th>\n</tr>\n</thead>\n<tbody>\n<tr>\n<td>Alice</td>\n<td>25</td>\n</tr>\n<tr>\n<td>Bob</td>\n<td>30</td>\n</tr>\n</tbody>\n</table>\n\n\n --- html\n\n<table>\n<caption>Basic Table Caption</caption>\n<thead>\n<tr>\n<th>Name</th>\n<th>Age</th>\n</tr>\n</thead>\n<tbody>\n<tr>\n<td>Alice</td>\n<td>25</td>\n</tr>\n<tr>\n<td>Bob</td>\n<td>30</td>\n</tr>\n</tbody>\n</table>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    Spacer(
        InvisibleSpacer(5),
    ),
    Table(
        Table {
            rows: [
                [
                    TextBox {
                        texts: [
                            Text {
                                text: "Name",
                                default_color: Color(BLACK),
                                style: BOLD ,
                                ..
                            },
                        ],
                        ..
                    },
                    TextBox {
                        texts: [
                            Text {
                                text: "Age",
                                default_color: Color(BLACK),
                                style: BOLD ,
                                ..
                            },
                        ],
                        ..
                    },
                ],
                [
                    TextBox {
                        texts: [
                            Text {
                                text: "Alice",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                    TextBox {
                        texts: [
                            Text {
                                text: "25",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                ],
                [
                    TextBox {
                        texts: [
                            Text {
                                text: "Bob",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                    TextBox {
                        texts: [
                            Text {
                                text: "30",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                ],
            ],
            caption: Some(
                TextBox {
                    texts: [
                        Text {
                            text: "Basic Table Caption",
                            default_color: Color(BLACK),
                            ..
                        },
                    ],
                    ..
                },
            ),
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]