src/interpreter/snapshots/inlyne__interpreter__tests__table_with_styled_caption.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n\n<table>\n<caption style=\"color: red; font-weight: bold;\" align=\"center\">Red Bold Centered Caption</caption>\n<tr>\n<td>Data 1</td>\n<td>Data 2</td>\n</tr>\n<tr>\n<td>Data 3</td>\n<td>Data 4</td>\n</tr>\n</table>\n\n\n --- html\n\n<table>\n<caption style=\"color: red; font-weight: bold;\" align=\"center\">Red Bold Centered Caption</caption>\n<tr>\n<td>Data 1</td>\n<td>Data 2</td>\n</tr>\n<tr>\n<td>Data 3</td>\n<td>Data 4</td>\n</tr>\n</table>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    Spacer(
        InvisibleSpacer(5),
    ),
    Table(
        Table {
            rows: [
                [
                    TextBox {
                        texts: [
                            Text {
                                text: "Data 1",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                    TextBox {
                        texts: [
                            Text {
                                text: "Data 2",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                ],
                [
                    TextBox {
                        texts: [
                            Text {
                                text: "Data 3",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                    TextBox {
                        texts: [
                            Text {
                                text: "Data 4",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                ],
            ],
            caption: Some(
                TextBox {
                    align: Center,
                    texts: [
                        Text {
                            text: "Red Bold Centered Caption",
                            color: Some(Color(RED)),
                            style: BOLD ,
                            ..
                        },
                    ],
                    ..
                },
            ),
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]