src/interpreter/snapshots/inlyne__interpreter__tests__table_without_caption.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n\n<table>\n<tr>\n<th>Name</th>\n<th>Value</th>\n</tr>\n<tr>\n<td>Item 1</td>\n<td>100</td>\n</tr>\n</table>\n\n## Next Section\n\nThis section should have proper spacing from the table above.\n\n\n --- html\n\n<table>\n<tr>\n<th>Name</th>\n<th>Value</th>\n</tr>\n<tr>\n<td>Item 1</td>\n<td>100</td>\n</tr>\n</table>\n<h2>Next Section</h2>\n<p>This section should have proper spacing from the table above.</p>"
expression: "interpret_md_with_opts(text, opts)"
---
[
    Spacer(
        InvisibleSpacer(5),
    ),
    Table(
        Table {
            rows: [
                [
                    TextBox {
                        texts: [
                            Text {
                                text: "Name",
                                default_color: Color(BLACK),
                                style: BOLD ,
                                ..
                            },
                        ],
                        ..
                    },
                    TextBox {
                        texts: [
                            Text {
                                text: "Value",
                                default_color: Color(BLACK),
                                style: BOLD ,
                                ..
                            },
                        ],
                        ..
                    },
                ],
                [
                    TextBox {
                        texts: [
                            Text {
                                text: "Item 1",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                    TextBox {
                        texts: [
                            Text {
                                text: "100",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                ],
            ],
            caption: None,
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            font_size: 24.0,
            is_anchor: Some("#next-section"),
            is_header: true,
            texts: [
                Text {
                    text: "Next Section",
                    color: Some(Color(BLACK)),
                    style: BOLD ,
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            texts: [
                Text {
                    text: "This section should have proper spacing from the table above.",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
